# ZMDStore

./: .gitignore  Document.md  LICENSE  README.md  auto_click.py  build_exe.ps1  build_portable.ps1  index.html  package-lock.json  package.json  requirements.txt  tauri_bridge.py  ui_main.py
core/: hotkey.py  image_utils.py  worker.py
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
ui/pages/: editor.py  transport.py
ui/widgets/: crop_widget.py  image_grid.py  message_dialog.py  resize_grip.py  rounded_combo.py  sidebar.py  title_bar.py  title_bar_modern.py
