[package]
name = "zmdstore_desktop"
version = "1.2.0"
description = "ZMDStore Tauri Desktop"
authors = ["LanKin"]
edition = "2021"

[lib]
name = "zmdstore_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0.4", features = [] }

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tauri = { version = "=2.2.0", features = [] }
tauri-plugin-global-shortcut = "=2.2.0"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
